# RAGEve

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
backend/: __init__.py  config.py  logging_config.py  main.py
backend/api/routes/: _limiter.py  agents.py  chat.py  files.py  (+13 more)
backend/clients/: ollama_client.py
backend/models/: __init__.py  chat.py
backend/schemas/: agents.py  chat.py  chat_history.py  datasets.py  files.py  huggingface.py  ollama.py  rerank.py
backend/services/: chat_store.py  file_processor.py  huggingface_service.py  ingestion_factory.py  ingestion_service.py
core/: __init__.py  chunking.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
rag/: __init__.py
rag/chunking/: __init__.py  adaptive.py  high_accuracy.py
rag/deepdoc/: __init__.py  analyzer.py  layout_parser.py  quality_scorer.py
rag/embedding/: ollama_embedder.py  sparse_embedder.py
rag/generation/: ollama_chat.py
rag/ingestion/: __init__.py  doc_converter.py  extractors.py  hf_ingestion.py  pipeline.py
rag/llm/: context_builder.py
rag/retrieval/: cross_encoder_reranker.py  rag_pipeline.py
rag/storage/: agent_store.py  qdrant_store.py
rag/utils/: memory.py
scripts/: _check_matrix.py  _restore_squad.py  backend.sh  install.sh  rageve.sh  run.sh
test/: __init__.py  _test_debug.mjs  _test_debug2.mjs  _test_e2e.py  _test_multiselect.mjs  _test_multiselect_v2.mjs  _test_search.py  _test_stress.py
test/benchmark/: __init__.py  chunking.py  embedding.py  metrics.py  retrieval.py  run.py  streaming.py
(+83 files in other folders)
